2025-10-17T00:52:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18579007175 # 799
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 661 1055 / 675 1069
* notice: next accum: outdated-unq outdated-all / unq all: 663 1057 / 676 1070
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-02] / [2025-10-16]

2025-10-16T00:53:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18546858807 # 798
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-16
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 660 1054 / 674 1068
* notice: next accum: outdated-unq outdated-all / unq all: 661 1055 / 675 1069
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-01] / [2025-10-15]

2025-10-15T00:53:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18514306139 # 797
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 659 1053 / 673 1067
* notice: next accum: outdated-unq outdated-all / unq all: 660 1054 / 674 1068
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-30] / [2025-10-14]

2025-10-14T00:52:02Z: