@@ -1,69 +1,19 @@
 {
-  "count": 13,
+  "count": 4,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-10-04T00:00:00Z",
+      "timestamp": "2025-10-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2025-10-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "timestamp": "2025-10-28T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     },
     {
-      "timestamp": "2025-10-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-10-16T00:00:00Z",
+      "timestamp": "2025-10-30T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
